@@ -1,3 +1,10 @@
+[0, 15, 77]: 2018-11-09
+  - setting `yaml.sort_base_mapping_type_on_output = False`, will prevent
+    explicit sorting by keys in the base representer of mappings. Roundtrip
+    already did not do this. Usage only makes real sense for Python 3.6+
+    (feature request by `Sebastian Gerber <https://bitbucket.org/spacemanspiff2007/>`__).
+  - implement Python version check in YAML metadata in ``_test/test_z_data.py``
+
 [0, 15, 76]: 2018-11-01
   - fix issue with empty mapping and sequence loaded as flow-style
     (mapping reported by `Min RK <https://bitbucket.org/minrk/>`__, sequence
